# mpc_kpi

./: .ciphercompute.toml  .gitignore  Cargo.toml  LICENCE.md  README.md  git-daemon.sh  rust-toolchain
data/csv/: bank_0.csv  bank_1.csv  bank_2.csv
data/inputs/: player_0.json  player_1.json  player_2.json
data/outputs/: player_0.json  player_1.json  player_2.json
src/: main.rs
tests/: data_0.csv  data_1.csv  data_caisse_2.csv  data_caisse_3.csv
